8279437: [JVMCI] exception in HotSpotJVMCIRuntime.translate can exit the VM

Backport-of: e14fb4f4aa9c4569615005e474f897c54094f024